# Banco

./: .gitignore  Banco.c  Banco.h  CMakeLists.txt  README.md  database
Cadastro/: CMakeLists.txt  Cadastro.c  Cadastro.h
Data/: BancoDeDados.txt  CMakeLists.txt  Database.c  Database.h
Tratamentos/: CMakeLists.txt  Tratamentos.c  Tratamentos.h
cmake/: FindMySQL.cmake
